--- a/ReadMe
+++ b/ReadMe
@@ -21,6 +21,7 @@ We could also use phone link on windows pc but ideally we are communicating with
 use docker?
 
 Tasks:
-1) Mongodb Driver setup to connect to database 
-2) Work on Authentication and Authorization
-3) Revist directives and see I want it to crawl linked in and message potenial people or notify me.
+1) Mongodb Driver setup to connect to database
+2) Google Model
+3) Work on Authentication and Authorization
+4) Revist directives and see I want it to crawl linked in and message potenial people or notify me.
